--- a/sway/config
+++ b/sway/config
@@ -1,9 +1,3 @@
-# Default config for sway
-#
-# Copy this to ~/.config/sway/config and edit it to your liking.
-#
-# Read `man 5 sway` for a complete reference.
-
 ### Keyboard Layout
 #
 #
@@ -14,67 +8,32 @@ input * xkb_layout "de"
 #
 font pango: SourceCodePro Medium 10
 
-### Gaps
-#
-gaps inner 9px
-gaps outer 7px
-
 include "$HOME/.cache/wal/colors-sway"
 
 ### Variables
 #
-# Logo key. Use Mod1 for Alt.
 set $mod Mod4
-# Your preferred terminal emulator
 set $term kitty
-# Your preferred application launcher
-# Note: pass the final command to swaymsg so that the resulting window can be opened
-# on the original workspace that the command was run on.
 set $menu wofi
+set $wallpaper $HOME/.config/sway/wallpapers/kurzgesagt.png
 
-set $wallpaper $HOME/.config/sway/wallpapers/evening-sky.png
-
-### Output configuration
-#
-# Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/
 output * bg $wallpaper fill
 
-# Example configuration:
+### Set color theme based on background
 #
-#   output HDMI-A-1 resolution 1920x1080 position 1920,0
 #
-# You can get the names of your outputs by running: swaymsg -t get_outputs
+bindsym $mod+t exec wal -i $wallpaper
 
 ### Idle configuration
 #
-# Example configuration:
 #
 exec swayidle -w \
           timeout 300 'swaylock -f -F -c 000000' -i $wallpaper \
           timeout 600 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
           before-sleep 'swaylock -f -F -c 000000' -i $wallpaper
-#
-# This will lock your screen after 300 seconds of inactivity, then turn off
-# your displays after another 300 seconds, and turn your screens back on when
-# resumed. It will also lock your screen before your computer goes to sleep.
-
-### Input configuration
-#
-# Example configuration:
-#
-#   input "2:14:SynPS/2_Synaptics_TouchPad" {
-#       dwt enabled
-#       tap enabled
-#       natural_scroll enabled
-#       middle_emulation enabled
-#   }
-#
-# You can get the names of your inputs by running: swaymsg -t get_inputs
-# Read `man 5 sway-input` for more information about this section.
 
 ### Key bindings
 #
-# Basics:
 #
     # Start a terminal
     bindsym $mod+Return exec $term
@@ -155,11 +114,6 @@ exec swayidle -w \
 #
 # Layout stuff:
 #
-    # You can "split" the current object of your focus with
-    # $mod+b or $mod+v, for horizontal and vertical splits
-    # respectively.
-    # bindsym $mod+b splith
-    # bindsym $mod+v splitv
 
     # Switch the current container between different layout styles
     bindsym $mod+s layout stacking
@@ -193,12 +147,6 @@ exec swayidle -w \
 # Resizing containers:
 #
 mode "resize" {
-    # left will shrink the containers width
-    # right will grow the containers width
-    # up will shrink the containers height
-    # down will grow the containers height
-
-    # Ditto, with arrow keys
     bindsym Left resize shrink width 10px
     bindsym Down resize grow height 10px
     bindsym Up resize shrink height 10px
@@ -221,7 +169,6 @@ default_border none
 #
 # Status Bar:
 #
-# Read `man 5 sway-bar` for more information about this section.
 bar {
 	swaybar_command waybar
 }
